5.Pipeline/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ml-pipeline-ui-ingress
  namespace: kubeflow
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # SSL을 사용하는 경우 아래 주석을 해제하세요
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: pipeline.com  # 여기에 원하는 도메인을 입력하세요
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ml-pipeline-ui
            port:
              number: 80
